# linux-audit-parser-rs

./: Cargo.toml  README.md  build.rs
.forgejo/workflows/: rust.yml
.github/workflows/: rust.yml
src/: body.rs  const.rs.in  event_id.rs  key.rs  lib.rs  message.rs  message_type.rs  message_type_impl.rs.in  parser.rs  test.rs  types.rs  value.rs
src/audit-specs/fields/: field-dictionary.csv
src/testdata/: line-acct-lock.txt  line-add-group.txt  line-add-user.txt  line-bpf.txt  line-chgrp-id.txt  line-cred-acq.txt  line-cred-disp.txt  line-cred-refr.txt  line-crypto-key-user.txt  line-crypto-param-change-user.txt  line-crypto-session.txt  line-daemon-end-2.txt  line-daemon-start.txt  line-del-group.txt  line-del-user.txt  line-grp-mgmt.txt  line-software-update.txt  line-uringop.txt  line-user-avc-1.txt  line-user-avc-2.txt  line-user-chauthtok.txt  line-user-end.txt  line-user-err.txt  line-user-login.txt  line-user-logout.txt  line-user-mgmt.txt  line-user-role-change.txt  line-user-selinux-err.txt  line-user-start.txt  line-usys-config.txt
