[package]
name = "linux-audit-parser"
description = "Parser for Linxu Audit logs"
repository = "https://github.com/hillu/linux-audit-parser-rs"
version = "0.1.0"
edition = "2021"
license = "LGPL-3.0-or-later"
authors = ["Hilko Bengen <bengen@hilluzination.de>"]
keywords = ["linux", "audit", "auditd", "parser"]

[dependencies]
indexmap = "2.4.0"
lazy_static = "1.5.0"
nom = "7.1.3"
serde = { version = "1.0.209", optional = true }
thiserror = "1.0.63"
tinyvec = { version = "1.8.0", features = ["alloc"] }

[features]
serde = ["dep:serde"]
default = ["serde"]
