[package]
name = "linux-audit-parser"
description = "Parser for Linxu Audit logs"
repository = "https://github.com/hillu/linux-audit-parser-rs"
version = "0.2.7"
edition = "2021"
license = "LGPL-3.0-or-later"
authors = ["Hilko Bengen <bengen@hilluzination.de>"]
keywords = ["linux", "audit", "auditd", "parser"]

[dependencies]
indexmap = "2"
lazy_static = "1.5.0"
nom = "8.0.0"
serde = { version = "1.0.209", optional = true }
serde_with = { version = "3.12.0", default-features = false, features = ["macros"], optional = true }
thiserror = ">= 1"
tinyvec = { version = "1.6", features = ["alloc"] }

[features]
serde = ["dep:serde", "dep:serde_with"]
default = ["serde"]

[dev-dependencies]
serde_test = "1.0.177"
